Fix T47154: Sequencer add/subtract ignored alpha